# wikicat

./: .gitignore  Cargo.toml
src/: api.rs  client.rs  conn.rs  error.rs  helpers.rs  lib.rs  url.rs
tests/: api.rs
